# nh

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  package.nix  shell.nix
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yaml  check.yaml  cleanup.yaml  hotpath-comment.yaml  hotpath-profile.yaml  nixos-search.yaml  profile.yaml  tag.yaml  test.yaml  update.yaml
docs/: README.md  remote-build.md
src/: checks.rs  clean.rs  commands.rs  completion.rs  darwin.rs  generations.rs  home.rs  installable.rs  interface.rs  lib.rs  logging.rs  main.rs  nixos.rs  notify.rs  remote.rs  search.rs  update.rs  util.rs
src/util/: platform.rs
xtask/: Cargo.toml
xtask/src/: comp.rs  main.rs  man.rs
