
[workspace]
members = [ ".", "xtask" ]

[workspace.package]
edition      = "2024"
rust-version = "1.86.0"
version      = "4.2.0"

[workspace.dependencies.clap]
features = [ "cargo", "color", "derive", "env", "unstable-styles" ]
version  = "4.5.51"

[package]
name                   = "nh"
license                = "EUPL-1.2"
repository             = "https://github.com/nix-community/nh"
description            = "Yet Another Nix Helper"
keywords               = [ "nix", "nixos", "nix-darwin", "helper", "CLI" ]
readme                 = "README.md"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anstyle = "1.0.13"
chrono = "0.4.42"
clap.workspace = true
clap-verbosity-flag = { version = "3.0.4", features = [ "tracing" ], default-features = false }
color-eyre = { default-features = false, features = [ "track-caller" ], version = "0.6.5" }
dix = "1.3.0"
elasticsearch-dsl = "0.4.24"
hostname = "0.4.1"
hotpath = { version = "0.6.0", optional = true }
humantime = "2.3.0"
inquire = { default-features = false, version = "0.9.1", features = [ "crossterm" ] }
nix = { default-features = false, features = [ "fs", "user" ], version = "0.30.1" }
regex = "1.12.2"
reqwest = { default-features = false, features = [
  "rustls-tls-native-roots",
  "blocking",
  "json",
], version = "0.12.23" }
secrecy = { version = "0.10.3", features = [ "serde" ] }
semver = "1.0.27"
serde = { features = [ "derive" ], version = "1.0.228" }
serde_json = "1.0.145"
subprocess = "0.2.9"
supports-hyperlinks = "3.1.0"
tempfile = "3.23.0"
textwrap = { features = [ "terminal_size" ], version = "0.16.2" }
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { features = [ "env-filter", "registry", "std" ], version = "0.3.20" }
which = "8.0.0"
yansi = "1.0.1"

[features]
hotpath                   = [ "dep:hotpath", "hotpath/hotpath" ]
hotpath-alloc-bytes-total = [ "hotpath/hotpath-alloc-bytes-total" ]
hotpath-alloc-count-total = [ "hotpath/hotpath-alloc-count-total" ]
hotpath-off               = [ "hotpath/hotpath-off" ]

[target.'cfg(target_os="macos")'.dependencies]
system-configuration = "0.6.1"

[dev-dependencies]
clap_mangen = "0.2.31"
proptest    = "1.9.0"
serial_test = "3.2.0"

[profile.release]
lto       = true
opt-level = 3
strip     = true

[lints.clippy]
complexity = { level = "warn", priority = -1 }
nursery    = { level = "warn", priority = -1 }
pedantic   = { level = "warn", priority = -1 }
perf       = { level = "warn", priority = -1 }
style      = { level = "warn", priority = -1 }

# The lint groups above enable some less-than-desirable rules, we should manually
# enable those to keep our sanity.
absolute_paths                 = "allow"
arbitrary_source_item_ordering = "allow"
enum_variant_names             = "allow"
implicit_return                = "allow"
missing_docs_in_private_items  = "allow"
non_ascii_literal              = "allow"
pattern_type_mismatch          = "allow"
print_stdout                   = "allow"
question_mark_used             = "allow"
similar_names                  = "allow"
single_call_fn                 = "allow"
std_instead_of_core            = "allow"
too_long_first_doc_paragraph   = "allow"
too_many_lines                 = "allow"
unused_trait_names             = "allow"

# In the honor of a recent Cloudflare regression
# Let's get rid of them, what the hell
panic       = "deny"
unwrap_used = "deny"

# Less dangerous, but we'd like to know
expect_used   = "warn"
todo          = "warn"
unimplemented = "warn"
unreachable   = "warn"
