[package]
name              = "xtask"
version.workspace = true
edition.workspace = true
publish           = false

[dependencies]
clap.workspace        = true
clap_complete         = "4.5.61"
clap_complete_nushell = "4.5.10"
clap_mangen           = "0.2.31"
nh                    = { path = "../." }
roff                  = "0.2.2"
